add better error handling to fetch/dispatch functions; add custom error generation to server

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,7 @@
 
 en:
   hello: "Hello world"
+  errors:
+    incorrect_login:
+      title: Incorrect login
+      detail: Email or password is incorrect
